modules/sidebar.css
/* ... */
  /* urlbar behavior on expanded single-toolbar mode*/
    :root:not([zen-right-side="true"])[zen-sidebar-expanded="true"][zen-compact-mode="true"] {
      #urlbar-container:has(#urlbar[open]) {
        left: 0 !important;
        right: auto !important;
        margin-inline: 0px !important;
      }

      #navigator-toolbox:has(#urlbar[zen-floating-urlbar="true"])[zen-user-show] #urlbar-container:hover {
        margin-left: 0px !important;
      }

      #navigator-toolbox:has(#urlbar[zen-floating-urlbar="true"]):not([zen-user-show]) #urlbar {
        margin-left: 0px !important;
      }

      #navigator-toolbox:has(#urlbar[zen-floating-urlbar="true"]):not([zen-user-show])[zen-has-hover] #urlbar:not(:hover) {
        margin-left: 0px !important;
      }

      #navigator-toolbox:has(#urlbar[open]:not([zen-floating-urlbar="true"])) #urlbar {
        margin-left: 0px !important;
      }
    }

    :root[zen-right-side="true"][zen-sidebar-expanded="true"][zen-compact-mode="true"] {
      #urlbar-container:has(#urlbar[open]) {
        left: auto !important;
        right: 0 !important;
        margin-inline: 0px !important;
      }

      #navigator-toolbox:has(#urlbar[zen-floating-urlbar="true"])[zen-user-show] #urlbar-container:hover {
        margin-right: 0px !important;
      }

      #navigator-toolbox:has(#urlbar[zen-floating-urlbar="true"]):not([zen-user-show]) #urlbar {
        margin-right: 0px !important;
      }

      #navigator-toolbox:has(#urlbar[zen-floating-urlbar="true"]):not([zen-user-show])[zen-has-hover] #urlbar:not(:hover) {
        margin-right: 0px !important;
      }

      #navigator-toolbox:has(#urlbar[open]:not([zen-floating-urlbar="true"])) #urlbar {
        margin-right: 0px !important;
      }
    }
}

/* expanded urlbar */
#urlbar {
  top: auto !important;
}

#urlbar[open] {
  min-width: var(--na-urlbar-width) !important;
  max-width: var(--na-urlbar-width) !important;
  left: 50% !important;
  transform: translateX(-50%) !important;
  right: auto !important;
  display: flex !important;
  flex-direction: column !important;
  top: auto !important;
  bottom: 62.5px !important;
}

/* move urlbar input to bottom*/
#urlbar>.urlbar-input-container {
  order: 1 !important;
}

/* navbar padding */
.urlbar-input-container {
  padding-inline: 2px !important;
}

/* === SIDEBAR - MULTIPLE TOOLBAR === */

  #tabbrowser-tabs,
  #TabsToolbar,
  #titlebar,
  #TabsToolbar-customization-target {
    flex-direction: column;
    height: 100%;
    margin-bottom: 2px !important; /* to match bottombar */
  }

/* docked sidebar */
:root:not([zen-compact-mode="true"]) #navigator-toolbox {
  /* background: var(--na-color-bg) !important; */
  padding: 0px !important;
  margin: 0px !important;
}

/* reduced height of floating sidebar for multiple/collapse toolbar */
@media not (-moz-bool-pref: "zen.view.use-single-toolbar"){
  :root[zen-compact-mode="true"] #navigator-toolbox {
    height: calc(100% - 48px) !important;
    align-self: center !important;
    margin-top: 20px !important;
  }
}

@media not (-moz-bool-pref: "zen.view.use-single-toolbar"){
  @media not (-moz-bool-pref: "wireframe.urlbar.position.top"){
    :root[zen-compact-mode="true"] #navigator-toolbox {
      height: calc(100% - 48px) !important;
      align-self: center !important;
      margin-top: 0px !important;
    }
  }
}

@media (-moz-bool-pref: "zen.view.use-single-toolbar"){
  :root[zen-compact-mode="true"] #navigator-toolbox {
    margin-top: 10px !important;
  }
}

:root:not([zen-sidebar-expanded="true"]):not([zen-compact-mode="true"]) #navigator-toolbox {
 min-width: 50px !important;
}


:root[zen-compact-mode="true"]:not([zen-sidebar-expanded="true"]) #navigator-toolbox {
  min-width: 90px !important;
}

/* expanded docked sidebar LEFT side mode */
:root:not([zen-right-side])[zen-sidebar-expanded="true"]:not([zen-compact-mode="true"]) #navigator-toolbox {
 /* background: var(--na-color-bg) !important; */
  padding-right: 4px !important;
  padding-left: 8px !important;
  padding-top: 5px !important;
}

/* expanded docked sidebar RIGHT side mode */
:root[zen-right-side][zen-sidebar-expanded="true"]:not([zen-compact-mode="true"]) #navigator-toolbox {
  /* background: var(--na-color-bg) !important; */
  padding-right: 8px !important;
  padding-left: 4px !important;
  padding-top: 5px !important;
}

/* ==== COMPACT MODE ==== */

:root:not([zen-sidebar-expanded="true"]) #zen-sidebar-top-buttons {
  margin-bottom: 6px !important;
}

@media not (-moz-bool-pref: "zen.view.use-single-toolbar") {
  /* expanded docked sidebar LEFT side mode */
  :root:not([zen-right-side])[zen-sidebar-expanded="true"][zen-compact-mode="true"] #titlebar {
    margin-left: 16px !important;
    margin-bottom: 6px !important;
    margin-top: 32px !important;
  }

  /* expanded docked sidebar RIGHT side mode */
  :root[zen-right-side][zen-sidebar-expanded="true"][zen-compact-mode="true"] #titlebar {
    margin-right: 16px !important;
    margin-bottom: 6px !important;
    margin-top: 32px !important;
  }
}

@media not (-moz-bool-pref: "wireframe.urlbar.position.top"){
  /* expanded docked sidebar LEFT side mode */
  :root:not([zen-right-side])[zen-sidebar-expanded="true"][zen-compact-mode="true"] #titlebar {
    margin-left: 16px !important;
    margin-bottom: 32px !important;
    margin-top: 6px !important;
  }

  /* expanded docked sidebar RIGHT side mode */
  :root[zen-right-side][zen-sidebar-expanded="true"][zen-compact-mode="true"] #titlebar {
    margin-right: 16px !important;
    margin-bottom: 32px !important;
    margin-top: 6px !important;
  }
}

/* expanded floating sidebar */
:root[zen-sidebar-expanded="true"][zen-compact-mode="true"] #titlebar {
  padding: 10px !important;
  border-radius: var(--na-user-border-radius) !important;
}

/* === COLLAPSED COMPACT === */

:root[zen-compact-mode="true"] #titlebar {
  padding: 10px !important;
  border-radius: var(--na-user-border-radius) !important;
}
/* ... */

